--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "nelmio/alice": "^3.1",
         "symfony/dotenv": "^4.0",
         "symfony/profiler-pack": "^1.0"
